Site name and favicons

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,5 +1,6 @@
 <head>
-  <title>{{ site.title }}</title>
+  <title>{{ site.name }}</title>
+
   {% include meta.html %}
 
   {% include favicon.html %}
