--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@
       </main>
       {% include footer.html %}
     </div>
-    {% if site.google_analytics and jekyll.environment == 'production' %}
+    {% if jekyll.environment == 'production' %}
     {% include analytics.html %}
     {% endif %}
   </body>
