Small fix, new cursor for video, smaller icons for the header, removed Portfolio word from header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header>
   <a href="{{ site.baseurl }}/">
-    <h1 class="site-name outline-text">{{ site.name }}</h1>
+    <h1 class="site-name outline-text">Maximilien Jourdain</h1>
   </a>
 
   <nav class="header-links">
