--- a/css/index.scss
+++ b/css/index.scss
@@ -140,6 +140,7 @@
         display: inline-block;
         @include mobile {
           display: block;
+          top: 10px;
         }
         padding-left: 0.2em;
         text-align: center;
@@ -169,6 +170,11 @@
           position: absolute;
           bottom: 2.4em;
           left: 0.7em;
+          @include mobile {
+            bottom:0;
+            top: -5%;
+            left: 77%;
+          }
           z-index: 9;
           display: flex;
           width: 100%;
@@ -189,6 +195,9 @@
         position: relative;
         // bottom: $post-offset-top;
         right: $post-offset-left;
+        @include mobile {
+          right: 2px;
+        }
         float: right;
         z-index: 10;
         top: -1.85em;
