--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,9 +4,9 @@
 //
 
 // Colors
-$bodyBackgroundColor: #333;
-$backgroundColor: #fff;
-$textColor: #333;
+$bodyBackgroundColor: #fff;
+$backgroundColor: #222;
+$textColor: #fff;
 $black: #1a1a1a;
 $blue : blue;
 $darkerGray: #222;
