--- a/css/index.scss
+++ b/css/index.scss
@@ -5,6 +5,7 @@
 .introduction {
   $description-width: 67%;
   $picture-width: 33%;
+  margin-bottom: 70px;
   display: flex;
   // margin-bottom:$bottom-margin;
   position: relative;
@@ -99,6 +100,7 @@
 
 .posts {
   .posts-title {
+    color: $textColor;
     margin-bottom:1em;
     background: $primaryColor;
     display: inline-block;
@@ -194,21 +196,21 @@
       .date {
         position: relative;
         // bottom: $post-offset-top;
-        right: $post-offset-left;
+        right: 13px;
         @include mobile {
           right: 2px;
         }
         float: right;
         z-index: 10;
-        top: -1.85em;
-        font-size: 2em;
-        line-height: 1.7em;
+        top: -2em;
+        font-size: 1.5em;
+        line-height: 1.3em;
         font-weight: bolder;
-        color: $backgroundColor;
+        color: $textColor;
         display: inline-block;
         padding: 0 0.2em;
 
-        background-color:$textColor;
+        background-color:$backgroundColor;
       }
     }
 
