--- a/css/index.scss
+++ b/css/index.scss
@@ -179,7 +179,7 @@
           }
           z-index: 9;
           display: flex;
-          width: 100%;
+          //width: 100%;
 
           .post-cover-icon {
             width: 7%;
