--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,5 +13,6 @@
   <link rel='stylesheet' href='//cdn.jsdelivr.net/npm/hack-font@3.3.0/build/web/hack-subset.css'>
   <link href="https://fonts.googleapis.com/css?family=Questrial" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Arvo:400,400i,700,700i" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Rubik:400" rel="stylesheet">
   <!-- Created with Jekyll Now - http://github.com/barryclark/jekyll-now -->
 </head>
