--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -4,8 +4,9 @@
 //
 
 // Colors
-$bodyBackgroundColor: #fff;
-$backgroundColor: #222;
+$bodyBackgroundColor: #222;//#fff;
+$backgroundColor: #9e9d8f;//rgba(234,221,6,0.9);//#222;
+$outlineColor: #222;//rgba(234,221,6,0.9);//#222;
 $textColor: #fff;
 $black: #1a1a1a;
 $blue : blue;
@@ -19,7 +20,8 @@ $primaryColor: rgba(234,221,6,0.9);
 
 // Font stacks
 // $font-normal: Questrial, Helvetica, sans-serif;
-$font-normal: Arvo, "Helvetica Neue", Helvetica, sans-serif;
+$font-normal: Rubik, "Helvetica Neue", Helvetica, sans-serif;
+// $font-normal: "Work Sans", "Helvetica Neue", Helvetica, sans-serif;
 $font-title: Arvo, "Helvetica Neue", Helvetica, Arial, sans-serif;
 // font-family: 'Playfair Display', serif;
 // Mobile breakpoints
