--- a/css/default.scss
+++ b/css/default.scss
@@ -71,7 +71,7 @@ h1 {
     font-size: 2.75em;
   }
   font-style: italic;
-  text-shadow: 1px 1px 0 $backgroundColor, -1px -1px 0 $backgroundColor, 1px -1px 0 $backgroundColor, -1px 1px 0 $backgroundColor;
+  text-shadow: 1px 1px 0 $outlineColor, -1px -1px 0 $outlineColor, 1px -1px 0 $outlineColor, -1px 1px 0 $outlineColor;
   color: $textColor;
   text-overflow: clip;
   a {
@@ -91,6 +91,10 @@ h3 {
 h4 {
   font-size: 1.875em;
   color: $gray;
+}
+
+.header-links {
+
 }
 
 a {
@@ -121,7 +125,7 @@ img {
 }
 
 .outline-text {
-  text-shadow: 1px 1px 0 $backgroundColor , -1px -1px 0 $backgroundColor , 1px -1px 0 $backgroundColor , -1px 1px 0 $backgroundColor ;
+  text-shadow: 1px 1px 0 $outlineColor , -1px -1px 0 $outlineColor , 1px -1px 0 $outlineColor , -1px 1px 0 $outlineColor ;
   color: $textColor;
   text-overflow: clip;
 }
