--- a/_includes/meta.html
+++ b/_includes/meta.html
@@ -8,8 +8,7 @@
 <meta property="og:image" content="{{ site.preview-image}}"/>
 <meta property="og:url" content="{{ site.url }}"/>
 <meta property="og:site_name" content="{{ site.title }}"/>
-<meta name="description" content="{{ site.description }}"/>
-
+<meta name="description" property="og:description" content="{{ site.description }}"/>
 <!-- Twitter meta -->
 <meta name="twitter:card" content="summary">
 <meta name="twitter:site" content="{{ site.footer-links.twitter }}">
