--- a/_includes/header.html
+++ b/_includes/header.html
@@ -6,7 +6,7 @@
   <nav class="header-links">
     <a class="header-twitter" href="https://twitter.com/{{ site.footer-links.twitter }}" target="_blank"><img src="/assets/images/twitter-logo.png" alt="Twitter"></a>
     <a class="header-linkedin" href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" target="_blank"><img src="/assets/images/linkedin-logo.png" alt="LinkedIn"></a>
-    <a class="header-mail" href="mailto:{{ site.footer-links.email }}" target="_blank"><img src="/assets/images/mail-logo.png" alt="Mail"></a>
+    <a class="header-mail" href="mailto:{{ site.footer-links.email }}?subject=I came here from your portfolio!" target="_blank"><img src="/assets/images/mail-logo.png" alt="Mail"></a>
     <a class="header-resume" href="assets/maximilienjourdain.pdf" target="_blank"><img src="/assets/images/link.png" alt="Resume"></a>
 
   </nav>
