--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,6 +1,6 @@
 <div class="footer">
     <div class="footer-description" target="_blank">{{ site.description }} <a href="assets/maximilienjourdain.pdf" target="_blank"> 👉 résumé</a></div>
     <div class="footer-contact">Get in touch on <a href="https://twitter.com/{{ site.footer-links.twitter }}" class="footer-text">twitter</a>, <a href="https://www.linkedin.com/in/{{ site.footer-links.linkedin }}" target="_blank" class="footer-text">linkedIn</a>,
-      or via my email : <a href="mailto:{{ site.footer-links.email }}" target="_blank">maximilien.jourdain@gmail.com</a>✌🏽</div>
+      or via my email : <a href="mailto:{{ site.footer-links.email }}?subject=I came here from your portfolio footer" target="_blank">maximilien.jourdain@gmail.com</a>✌🏽</div>
     <!-- <div class="bottom-point">•</div> -->
 </div>
