--- a/_sass/_variables.scss
+++ b/_sass/_variables.scss
@@ -5,7 +5,7 @@
 
 // Colors
 $bodyBackgroundColor: #222;//#fff;
-$backgroundColor: #878787;//rgba(234,221,6,0.9);//#222;
+$backgroundColor: #121212a6;//rgba(234,221,6,0.9);//#222;
 $outlineColor: #222;//rgba(234,221,6,0.9);//#222;
 $textColor: #fff;
 $black: #1a1a1a;
